# tdGenS

./: A02Batch.csv  A03TO.csv  A04PO.csv  A04POComponent.csv  A13Reservation.csv  build.bat  data.xlsx  halb_labels.csv  main.py  pyproject.toml  ~$data.xlsx
masterdata/: mat_spec.csv  pbom.csv  storage_location.csv
saved/: cleaning_labels.csv  disp_labels.csv  halb_labels.csv  ms_label_100895640288.csv  ms_label_177513.csv  ms_label_204715562680.csv  ms_label_218767.csv  ms_label_223886745624.csv  ms_label_231631903793.csv  ms_label_232071980117.csv  ms_label_276030669552.csv  ms_label_375761249848.csv  ms_label_380683962908.csv  ms_label_399860.csv  ms_label_432813952909.csv  ms_label_446376571565.csv  ms_label_451514429155.csv  ms_label_480047294191.csv  ms_label_513101402159.csv  ms_label_535358.csv  ms_label_575271.csv  ms_label_581564624407.csv  ms_label_604610960858.csv  ms_label_633988.csv  ms_label_645466737083.csv  ms_label_646228732765.csv  ms_label_717620.csv  ms_label_740368959469.csv  ms_label_746055924601.csv  ms_label_751654.csv  ms_label_754190.csv  ms_label_769780126631.csv  ms_label_805301366842.csv  ms_label_823635781583.csv  ms_label_824367.csv  ms_label_830877448038.csv  ms_label_950005415138.csv  ms_label_991561540527.csv  ms_labels.csv
src/: A02.py  A02Gen.py  A03.py  A03Gen.py  A04.py  A04Gen.py  A13.py  A13Gen.py  AxxGen.py  HalbLabel.py  Header.py  LabelUI.py  MSLabel.py  Xgen.py  qrbar.py
src/model/: A02.py  A03.py  A04.py  A13.py  A3.py  Header.py  tools.py
